--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "license": "Jam",
   "dependencies": {
     "@supabase/supabase-js": "^1.30.0",
+    "express": "^4.18.1",
     "netlify": "^11.0.0",
     "node-fetch": "^3.2.0",
     "nodemailer": "^6.7.2",
-    "qrcode": "^1.5.0"
+    "qrcode": "^1.5.0",
+    "serverless-http": "^3.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.0"
